# markdown-callouts

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
.tools/: ci.sh  copier-answers.yml  release.sh
docs/: index.md
markdown_callouts/: __init__.py  callouts.py  github_callouts.py
requirements/: requirements-docs.txt
tests/: test_extension.py
tests/all/: adjacent.yml
tests/callouts/: adjacent-1.yml  adjacent-2.yml  adjacent-3.yml  basic.yml  blockquotes-many-joined.yml  lowercase-nope.yml  nested-block.yml  one-letter.yml  with-list.yml
tests/callouts/details/: basic-open.yml  basic.yml
tests/callouts/title/: avoid-bold-after-text.yml  avoid-title.yml  blockstyle-interrupted.yml  inline-formatting.yml  linebreak-after-title.yml  nested-block.yml  no-dot.yml  no-strip-period.yml  preserve-dot-double.yml  preserve-dot-format.yml
tests/extension/: adjacent-nope.yml  adjacent-text-block.yml  adjacent-text-nope.yml  avoid-inside-list.yml  blockquotes-split-by-comments.yml  blockquotes-together.yml  blockstyle-and-blockquote.yml  extra-space.yml  just-callout.yml  linebreak-after.yml  newline-first.yml  with-list.yml
tests/extension/details/: extra-space-nope.yml  nested.yml  no-space.yml
tests/extension/title/: basic.yml  blockstyle.yml  link-ref-as-title.yml  multiline-title.yml  no-body.yml  preserve-dot-escape.yml  strip.yml  text-after.yml
tests/github/: adjacent-nope.yml  adjacent-text-block.yml  adjacent-text-nope.yml  adjacent.yml  barely-callout.yml  basic.yml  blockquotes-many-joined.yml  blockquotes-split-by-comments.yml  blockquotes-together.yml  classes-nope.yml  classes.yml  empty-nope.yml  extra-space.yml  just-callout-nope.yml  just-callout.yml  linebreak-after.yml  lowercase-nope.yml  nested-block-nope.yml  nested-block.yml  nested-clumped.yml  newline-first.yml  varied-case.yml  with-italic-nope.yml  with-italic.yml  with-list.yml
