[tool.poetry]
name = "markdown-callouts"
version = "0.3.0"
description = "Markdown extension: a classier syntax for admonitions"
authors = ["Oleh Prypin <oleh@pryp.in>"]
license = "MIT"
repository = "https://github.com/oprypin/markdown-callouts"
keywords = ["markdown", "extensions"]
readme = "README.md"

[tool.poetry.plugins."markdown.extensions"]
callouts = "markdown_callouts:CalloutsExtension"

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-golden = ">=0.2.0"
beautifulsoup4 = "^4.9.0"
black = ">=20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
mypy = ">=0.960"
types-Markdown = ">=3.4.1"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:markdown_callouts.*:"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
